# classicalDFT

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  ActionPlan.md  CMakeLists.txt  CODING_GUIDELINES.md  CODING_GUIDELINES_MODERN.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RENOVATION.md  docker-compose.yaml
docs/: CMakeLists.txt  Dockerfile
docs/algorithms/picard/: Makefile  README.md  main.cpp  plot.hpp  utils.hpp
docs/algorithms/string_method/: Makefile  README.md  main.cpp  plot.hpp
docs/config/: Makefile  README.md  config.ini  main.cpp
docs/console/: Makefile  README.md  main.cpp
docs/crystal/: Makefile  README.md  main.cpp  plot.hpp
docs/crystal/check/: main.cpp
docs/crystal/exports/: fcc_4x4x4.xyz
docs/density/: Makefile  README.md  config.ini  main.cpp  plot.hpp  utils.hpp
docs/density/check/: main.cpp
docs/dynamics/: Makefile  README.md  config.ini  main.cpp  plot.hpp  utils.hpp
docs/dynamics/check/: main.cpp
docs/functional/fmt/: Makefile  README.md  main.cpp  plot.hpp
docs/functional/interaction/: Makefile  README.md  main.cpp  plot.hpp
docs/geometry/: Makefile  README.md  main.cpp
docs/math/arithmetic/: Makefile  README.md  main.cpp
docs/math/autodiff/: Makefile  README.md  main.cpp  plot.hpp
docs/math/convolution/: Makefile  README.md  main.cpp  plot.hpp
docs/math/fourier/: Makefile  README.md  main.cpp
docs/math/integration/: Makefile  README.md  main.cpp
docs/math/spline/: Makefile  README.md  main.cpp  plot.hpp
docs/nucleation/: Makefile  README.md  config.ini  main.cpp  plot.hpp  utils.hpp
docs/nucleation/check/: config.ini  main.cpp
docs/nucleation/config/: lj_hen.toml  lj_hon.toml  tWF_hon.toml
docs/nucleation/exports/: perturbed_x_slice.csv  radial.csv  x_slice.csv  xy_plane.csv  y_slice.csv
docs/potentials/: Makefile  README.md  main.cpp  plot.hpp  utils.hpp
docs/potentials/check/: main.cpp
docs/solver/: Makefile  README.md  main.cpp  plot.hpp  utils.hpp
docs/solver/check/: main.cpp
docs/thermodynamics/: Makefile  README.md  main.cpp  plot.hpp
docs/thermodynamics/check/: main.cpp
examples/: CMakeLists.txt  Dockerfile
examples/cdft/: CMakeLists.txt  config.cpp  crystal.cpp  eos.cpp  fmt.cpp  numerics.cpp  potentials.cpp
examples/config/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/config_parser/: CMakeLists.txt  main.cpp
examples/console/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/crystal/: CMakeLists.txt  Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/density/: CMakeLists.txt  Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/droplet/: Makefile  README.md  main.cpp
examples/dynamics/: Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/functional/fmt/: Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/functional/interaction/: Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/geometry/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/graph/: main.cpp
examples/graphs/: CMakeLists.txt  Makefile  main.cpp
examples/math/arithmetic/: Makefile  README.md  main.cpp
examples/math/fourier/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/math/integration/: Makefile  README.md  main.cpp
examples/math/spline/: Makefile  README.md  main.cpp
examples/nucleation/: Makefile  README.md  config.ini  main.cpp  plot.hpp
examples/numerics/arithmetic/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/numerics/fourier/: Makefile  main.cpp
examples/numerics/integration/: CMakeLists.txt  Makefile  main.cpp
examples/numerics/spline/: main.cpp
examples/physics/crystal/: Makefile  README.md  main.cpp
examples/physics/density/: Makefile  README.md  main.cpp
examples/physics/fmt/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/physics/interaction/: CMakeLists.txt  Makefile  main.cpp
examples/physics/species/: Makefile  README.md  main.cpp
examples/physics/thermodynamics/: Makefile  README.md  main.cpp
examples/plotting/: CMakeLists.txt  README.md
examples/potentials/: Makefile  README.md  main.cpp  plot.hpp
examples/solver/: Makefile  README.md  main.cpp  plot.hpp
examples/species/: config.ini  main.cpp
examples/thermodynamics/: Makefile  README.md  main.cpp  plot.hpp
tests/: CMakeLists.txt  main.cpp  solver.cpp  species.cpp  state.cpp
tests/algorithms/: ddft.cpp  fire.cpp
tests/algorithms/solvers/: continuation.cpp  jacobian.cpp
tests/cdft/: config_test.cpp
tests/cdft/functional/: density_test.cpp  fmt_test.cpp
tests/cdft/numerics/: fourier_test.cpp  math_test.cpp  spline_test.cpp
tests/cdft/physics/: crystal_test.cpp  eos_test.cpp  potentials_test.cpp
tests/config/: parser.cpp
tests/crystal/: lattice.cpp
tests/exceptions/: grace.cpp  parameter.cpp
tests/functional/fmt/: convolution.cpp  weights.cpp
tests/functionals/: functionals.cpp  hard_sphere.cpp  ideal_gas.cpp  mean_field.cpp
tests/functionals/bulk/: phase_diagram.cpp  thermodynamics.cpp
tests/functionals/fmt/: measures.cpp  models.cpp  weights.cpp
tests/geometry/: element.cpp
tests/geometry/2D/: element.cpp  mesh.cpp  uniform_mesh.cpp
tests/geometry/3D/: element.cpp  mesh.cpp  uniform_mesh.cpp
tests/geometry/base/: element.cpp  vertex.cpp
tests/graph/: grace.cpp
tests/integration/: crystal.cpp  types.cpp
tests/integration/algorithms/: nucleation.cpp  string_method.cpp
tests/integration/functionals/: fmt.cpp  interaction.cpp  mean_field.cpp
tests/integration/physics/: eos.cpp  (+2 more)
tests/io/: config.cpp  config_parser.cpp  console.cpp
tests/math/: arithmetic.cpp  autodiff.cpp  convolution.cpp  exceptions.cpp  fourier.cpp  hessian.cpp  integration.cpp  spline.cpp
tests/numerics/: arithmetic.cpp  fourier.cpp  functions.cpp  integration.cpp  spline.cpp
tests/physics/: eos.cpp  hard_spheres.cpp  interactions.cpp  model.cpp  potentials.cpp
tests/plotting/: grace.cpp
tests/thermodynamics/: eos.cpp
tests/unit/: console.cpp  crystal.cpp  density.cpp  exceptions.cpp  fields.cpp  grid.cpp  types.cpp
(+516 files in other folders)
